# actual_jappybird

./: Cargo.toml  bevy_game-a9368fbbce26427d.js  index.html
.github/workflows/: deploy-page.yaml
cmd/: Cargo.toml  build.rs  index.html
cmd/src/: main.rs
game/: Cargo.toml
game/src/: audio.rs  game_session.rs  gravity.rs
game/src/actions/: game_control.rs  mod.rs
mobile/: Cargo.toml
mobile/src/: lib.rs
src/: audio.rs  collision.rs  game_over.rs  game_session.rs  hud.rs  lib.rs  loading.rs  menu.rs  obstacle.rs  player.rs  ui.rs  velocity.rs
src/actions/: game_control.rs  mod.rs
